<resources>
    <string name="app_name">PersonalData</string>
    <string name="details">Details</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="Email">Email</string>
    <string name="Country">Country</string>
    <string name="submit">Submit</string>
    <string name="name2">Name :</string>
    <string name="email2">Email :</string>
    <string name="phone_number2">Phone Number :</string>
    <string name="data2">DATA</string>
    <string name="country2">Country :</string>
    <string name="enter_a_name">Enter a name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_mail_id">Enter Mail ID</string>
    <string name="enter_country_name">Enter Country Name</string>
</resources>