<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_details"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded"
        android:inputType="text"
        android:paddingStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingEnd="20dp"
        android:autofillHints="name"
        android:hint="@string/enter_a_name"/>

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/et_name"
            android:layout_marginStart="40dp"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded"
            android:inputType="phone"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_phone"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints="phone"
            android:hint="@string/enter_phone_number"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/et_phone"
            android:layout_marginStart="40dp"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/rounded"
            app:layout_constraintTop_toBottomOf="@+id/tv_email"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints="phone"
            android:hint="@string/enter_mail_id"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Country"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/et_email"
            android:layout_marginStart="40dp"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/et_country"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/rounded"
            app:layout_constraintTop_toBottomOf="@+id/tv_country"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints="phone"
            android:hint="@string/enter_mail_id"
            android:inputType="text"/>

        <Button
            android:id="@+id/bt_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:background="@drawable/rounded"
            app:layout_constraintTop_toBottomOf="@+id/et_country"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>