<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".MainActivity2">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/et_fullsize"
            android:layout_width="380dp"
            android:layout_height="700dp"
            android:background="@drawable/rounded"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data2"
            android:textSize="25sp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name2"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_data"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp" />

        <TextView
            android:id="@+id/tv_phone2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number2"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_name2"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp" />

        <TextView
            android:id="@+id/tv_email2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email2"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_phone2"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp" />

        <TextView
            android:id="@+id/tv_country2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country2"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_email2"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>